--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,7 +118,6 @@ allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
-allow 130.193.15.186;
 allow 131.72.79.38;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -195,7 +194,6 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -247,7 +245,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.40;
 allow 185.106.102.102;
 allow 185.107.57.64;
@@ -915,6 +912,7 @@ allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -948,6 +946,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1166,7 +1165,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1237,6 +1235,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
+allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1254,7 +1253,6 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::40;
 allow 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 allow 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
@@ -1613,6 +1611,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1839,6 +1838,7 @@ allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.29.128.145;
+allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
