--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -118,7 +118,6 @@ deny 125.212.241.131;
 deny 125.253.56.119;
 deny 128.127.180.156;
 deny 128.31.0.13;
-deny 130.193.15.186;
 deny 131.72.79.38;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -195,7 +194,6 @@ deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.121.177;
-deny 176.58.89.182;
 deny 176.65.134.4;
 deny 176.65.148.133;
 deny 176.65.148.3;
@@ -247,7 +245,6 @@ deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.40;
 deny 185.106.102.102;
 deny 185.107.57.64;
@@ -915,6 +912,7 @@ deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -948,6 +946,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1166,7 +1165,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
-deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -1237,6 +1235,7 @@ deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
+deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
@@ -1254,7 +1253,6 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::40;
 deny 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 deny 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
@@ -1613,6 +1611,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1839,6 +1838,7 @@ deny 82.221.131.5;
 deny 82.221.131.71;
 deny 82.221.139.190;
 deny 82.29.128.145;
+deny 82.96.141.198;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
