--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -144,7 +144,6 @@ set_real_ip_from 2602:fb54:1400::1d;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -407,7 +406,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -437,7 +435,6 @@ set_real_ip_from 2a06:1700:1:108::b829:eee2;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
-set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 set_real_ip_from 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -672,7 +669,6 @@ set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:16a4::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
-set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:85c1:8d2:16d1::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
@@ -692,7 +688,6 @@ set_real_ip_from 2a10:1fc0:9::26fb:48a1;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -769,5 +764,4 @@ set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
-set_real_ip_from 2c0f:6c0:0:11::5e3d;
-set_real_ip_from 2c0f:6c0:0:d::d28b;
+set_real_ip_from 2a14:c380:50:62::a;
