--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -573,9 +573,9 @@ allow 194.26.192.177;
 allow 194.26.192.22;
 allow 194.26.192.77;
 allow 194.42.196.42;
+allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -1445,6 +1445,7 @@ allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
+allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1504,7 +1505,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1807,6 +1807,7 @@ allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.85.155.71;
 allow 78.142.18.219;
 allow 78.159.131.103;
 allow 79.100.12.71;
