--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -573,9 +573,9 @@ deny 194.26.192.177;
 deny 194.26.192.22;
 deny 194.26.192.77;
 deny 194.42.196.42;
+deny 194.53.137.102;
 deny 194.53.137.156;
 deny 194.55.167.14;
-deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
@@ -1445,6 +1445,7 @@ deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
+deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1504,7 +1505,6 @@ deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
@@ -1807,6 +1807,7 @@ deny 77.48.28.204;
 deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
+deny 77.85.155.71;
 deny 78.142.18.219;
 deny 78.159.131.103;
 deny 79.100.12.71;
